Update and rename aboutme.html to index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <label class="logo">Charles Website</label>
         <nav class="navigation">
             <ul class="nav-list">
-                <li><a href="aboutme.html">About Me</a></li>
+                <li><a href="index.html">About Me</a></li>
                 <li><a href="otherpage.html">Other</a></li>
             </ul>
         </nav>
